# chinese-exam-distiller

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/general_skills/: test_paper.json
data/study_guides/: sample.md  sample_general.md  test_paper.md  test_paper_general.md
prompts/: distill_skill.txt  generalize_skill_system.txt  generalize_skill_user.txt  structure_extract.txt
src/ced/: cli.py  distiller.py  generalize.py  json_utils.py  llm_client.py  pdf_extract.py  question_group.py  skill_renderer.py  structure_parser.py
